--- a/style.css
+++ b/style.css
@@ -110,6 +110,15 @@ body {
 
 }
 
+.link-button-second {
+    text-decoration: none;
+    background-image: linear-gradient(orange, rgb(209, 57, 30));
+    padding: 10px 40px;
+    color: white;
+    font-weight: 700;
+    border-radius: 10px;
+    margin-left: 45%;
+}
 
 
 .title3 {
@@ -121,7 +130,7 @@ body {
 
 .paragraph3 {
     text-align: center;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 100;
     margin-bottom: 20px;
 }
@@ -160,22 +169,13 @@ body {
     border-radius: 10px;
 }
 
-.subscribe-box {
-    text-decoration: none;
-    background-image: linear-gradient(orange, rgb(209, 57, 30));
-    padding: 10px 40px;
-    color: white;
-    font-weight: 700;
-    border-radius: 10px;
+footer {
+    text-align: center;
+    padding: 3px;
+    background-color: black;
+    color: tomato;
 }
 
-.gets-update {
-    display: flex;
-    width: 600px;
-    height: 100px;
-    border: 1px solid grey;
-    background-color: #fff4d6;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
+span {
+    color: #edf5f7;
 }
