--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
+    overflow-x: hidden;
 }
 
 .lets-help {
@@ -54,7 +56,8 @@ body {
     font-size: 25px;
     font-weight: 200;
     margin-bottom: 20px;
-    text-decoration: underline;
+    border-style: outset;
+    border-top-width: 0px;
 
 }
 
@@ -136,7 +139,7 @@ body {
 }
 
 .our-donate-plan {
-    margin-top: 100px;
+    margin-top: 70px;
     padding: 50px;
     display: flex;
     justify-content: space-evenly;
