--- a/style.css
+++ b/style.css
@@ -57,13 +57,16 @@ body {
     justify-content: space-evenly;
 }
 
-.others-amount {
+.input-others {
     text-align: center;
-    font-size: 25px;
+    border: none;
+    border-bottom: 2px solid rgb(243, 96, 96);
+    font-size: 20px;
     font-weight: 200;
-    margin-bottom: 20px;
-    border-style: outset;
-    border-top-width: 0px;
+    width: 30%;
+    padding: 5px 10px;
+    margin-left: 35%;
+    margin-bottom: 25px;
 
 }
 
@@ -188,20 +191,33 @@ body {
 
 .gets-update-class {
     width: 500px;
-    height: 80px;
+    height: 50px;
     background-color: #fff4d6;
-    padding: 50px;
+    padding: 60px;
     margin-left: 30%;
     margin-bottom: 90px;
 }
 
-.colored-subscribe {
-    background-color: red;
-    padding: 10px 10px;
-    color: white;
-    font-weight: 400;
+.gets-update-description {
+    display: flex;
+    justify-content: center;
+}
+
+.input-email {
+    width: 250px;
+    padding: 5px 10px;
+    background-color: #F8F9F9;
+}
+
+.subscribe-button {
+    text-decoration: none;
+    border: 10px;
+    background-color: tomato;
+    color: #edf5f7;
+    padding: 6px 10px;
 
 }
+
 
 footer {
     text-align: center;
@@ -212,4 +228,9 @@ footer {
 
 span {
     color: #edf5f7;
+}
+
+.input {
+    width: 99px;
+    padding: 10px;
 }
